--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,15 @@
   background-size: cover;
 }
 
+/* nav */
+.top-nav {
+  background-color: blue;
+}
+.nav-buttons {
+  display: flex;
+  align-items: center;
+}
+
 /* main container */
 
 .container {
@@ -38,7 +47,6 @@
   font-weight: 800;
   max-width: 140vw;
   min-width: 50vw;
-  margin-bottom: 30px;
   margin-left: 40px;
   text-align: left;
 }
@@ -70,6 +78,7 @@
 .comment-list {
 flex: 5;
 overflow-y: scroll;
+height: 27vh;
 }
 
 .comment-form {
@@ -80,13 +89,21 @@ margin-left: 20px;
 
 .comment-card {
   width: auto;
-  color: black;
-  background-color: white;
+  color: white;
+  background-color: transparent;
   margin-right: 45px;
+  border: 2px solid #007FF6;
   border-radius: 3%;
   margin-bottom: 10px;
   padding: 5px;
+}
 
+.comment-content {
+  font-size: 26px;
+}
+
+.comment-name {
+  font-size: 18px;
 }
 
 /* watchlist */
@@ -116,4 +133,15 @@ margin-left: 20px;
 
 .watchlist-item {
   margin: 10px;
+}
+
+/* signup */
+
+.main-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  height: 94.9vh;
+
 }
